<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/description"
        android:src="@drawable/taxime_logo_3" />

    <Button
        android:id="@+id/bRequestCarpool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/req_car" />

    <Button
        android:id="@+id/bOfferCarpool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bRequestCarpool"
        android:text="@string/offer_car" />

    <TextView
        android:id="@+id/tvNeedHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bOfferCarpool"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:clickable="true"
        android:text="@string/help" />

</RelativeLayout>