<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    tools:context="${packageName}.${activityClass}" >
 <!-- #FF51514F -->

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:text="test@gmail.com"
        android:ems="10"
        android:inputType="textEmailAddress" >
        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/tvLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etLoginEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/loginemail" />

    <Button
        android:id="@+id/bLogin"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLoginEmail"
        android:layout_alignRight="@+id/etLoginEmail"
        android:layout_below="@+id/etLoginPassword"
        android:text="@string/login" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bLogin"
        android:layout_below="@+id/tvLoginPassword"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        android:id="@+id/tvLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginEmail"
        android:layout_centerHorizontal="true"
        android:text="@string/loginpass" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/description"
        android:src="@drawable/taxime_logo_3" />

    <TextView
        android:id="@+id/tvNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:shadowColor="@color/white"
        android:text="@string/new_user" />

</RelativeLayout>