<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mac.se3a04.taxime.ProfileEdit" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fname" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lname" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex" />

            <Spinner
                android:id="@+id/spGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender_array"
                android:prompt="@string/gender_prompt" />


            <TextView
                android:id="@+id/tvProffession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proff" />

            <EditText
                android:id="@+id/etProffession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bConfirmChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView1"
        android:text="Confirm Changes" />

</RelativeLayout>